Fixed spacing issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -96,7 +96,7 @@ nav button {
 }
 
 #home p {
-    max-width: 750px;
+    max-width: 800px;
     margin: 10px;
     font-size: 25px;
     line-height: 1.5em;
